# midas-journal-315

./: CMakeLists.txt  README.txt
Data/: test_2D.vtk  test_2D_result_hybrid_metric_full_neighbors.vtk  test_2D_result_hybrid_metric_non_full_neighbors.vtk  test_2D_result_simple_metric_full_neighbors.vtk  test_3D.vtk  test_3D_result_hybrid_metric_full_neighbors.vtk  test_3D_result_hybrid_metric_non_full_neighbors.vtk  test_3D_result_simple_metric_non_full_neighbors.vtk
src/: itkDijkstraFilterTest2D.cpp  itkDijkstraFilterTest3D.cpp  itkShortestPathImageFilter.h  itkShortestPathImageFilter.txx  itkWeightGradAngleMetricCalculator.h  itkWeightGradAngleMetricCalculator.txx  itkWeightMetricCalculator.h  itkWeightMetricCalculator.txx  itkWeightSimpleMetricCalculator.h  itkWeightSimpleMetricCalculator.txx
